--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ logs/
 # Dependency directories
 client/node_modules/
 
-# Build output
-client/build/
+# # Build output
+# client/build/
 
 # Temporary files
 *.tmp
